ipc/ipdl/test/ipdl/error/managerNoDtor.ipdl
include protocol "managedNoDtor.ipdl";

protocol managerNoDtor {
    manages managedNoDtor;

parent:
    managedNoDtor();
    // error: no ctor defined
};
